fix bug menu not collapsing, fix bug hover shown while menu hidden, add transitions

--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -4,5 +4,4 @@ main {
 
 .main__header {
   background-color: transparent;
-  min-height: 40vh;
 }
